syntax = "proto3";

package auth;

option go_package = "api/grpc/v1;authv1";

service AuthService {
  rpc Introspect (IntrospectRequest) returns (IntrospectResponse);
}

message IntrospectRequest {
  string token = 1;
  string user_id = 2;
}

message IntrospectResponse {
  string error_message = 1;
}